--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#11A982</color>
+    <color name="colorPrimaryDark">#279B7D</color>
+    <color name="colorLight">#68BFA9</color>
+    <color name="colorButtonBox">#A36B3B</color>
+    <color name="colorButtonText">#FECF50</color>
+    <color name="colorText">#000000</color>
+    <color name="colorUnselectedText">#777474</color>
+
 </resources>
